# HephaestOS

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  LICENSE  README.md  bochsrc.txt
.circleci/: build-toolchain.sh  config.yml  download-dependencies.sh  update-cmake.sh
.github/: CODEOWNERS  pull_request_template.md
.run/: QEMU Kernel Debug.run.xml
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  linker.ld  overview.md
src/drivers/graphics/: display.h  display.hpp
src/drivers/io/: IO.hpp  io.h
src/hardware/: io.h  register_address.h
src/kernel/: CMakeLists.txt  gdt.h  kernel.cpp  kernel.md  kernel_main.asm  linker.ld  makefile  sys.hpp  types.h
src/kernel/boot/: CMakeLists.txt  boot.md  boot_16.asm  boot_config.asm  boot_grub_32.asm  boot_grub_stage_2.asm  boot_higher.asm  boot_info.h  boot_main.asm  global_descriptor_table.asm  global_descriptor_table.h  init.cpp  init.h  interrupt_descriptor_table.asm  interrupt_descriptor_table.h  io.h  linker.ld  loader nasm  loader norm  loader.asm  multiboot_info.h
src/kernel/boot/elf/: boot_elf_loader.cpp  boot_elf_loader.h  elf_header.h  elf_info.h  elf_loader.cpp  elf_loader.h
src/kernel/boot/gdt/: gdt.md  global_descriptor.cpp  global_descriptor.h  global_descriptor_table.asm  global_descriptor_table.cpp  global_descriptor_table.h
src/kernel/boot/grub/: memory_map.cpp  memory_map.h  multiboot_info.h
src/kernel/boot/idt/: exception_handler.asm  idt.md  interrupt_descriptor.cpp  interrupt_descriptor.h  interrupt_descriptor_table.asm  interrupt_descriptor_table.cpp  interrupt_descriptor_table.h  interrupt_handler.asm  interrupt_handler.cpp  interrupt_handler.h  interupt_descriptor.h  programmable_interrupt_controller.cpp  programmable_interrupt_controller.h
src/kernel/boot/idt/exceptions/: exception_handler.asm  exception_handler.cpp  exception_handler.h
src/kernel/boot/idt/interrupts/: interrupt_handler.cpp  interrupt_handler.h
src/kernel/boot/idt/model/: handler_registers.h
src/kernel/boot/idt/pic/: programmable_interrupt_controller.cpp  programmable_interrupt_controller.h
src/kernel/boot/memory/: boot_allocator.cpp  boot_allocator.h  new.cpp  new.h
src/kernel/boot/modules/: module_loader.h
src/kernel/boot/paging/: page_directory_entry.h  page_table_entry.h  paging.asm  paging.cpp  paging.h
src/kernel/boot/serial/: serial_port.cpp  serial_port.h
src/kernel/boot/tss/: task_state_segment.asm  task_state_segment.cpp  task_state_segment.h  tss.asm  tss.h
src/kernel/drivers/: display.h  register_address.h  video_buffer_display.cpp  video_buffer_display.h
src/kernel/hal/: CMakeLists.txt
src/kernel/hal/io/: io.asm  io.h
src/kernel/hal/paging/: page.cpp
src/kernel/klibc/: array.h  pure_function.cpp  stdio.h  string.h
src/kernel/klibc/stdio/: sprintf.h  stdio.h
src/kernel/lib/: CMakeLists.txt
src/kernel/lib/debug/: debug.h
src/kernel/lib/libc/: array.h  stdint.h  stdio.h  string.h
src/kernel/lib/libc/stdio/: sprintf.h
src/kernel/lib/libcpp/: new.h  pure_function.cpp
src/kernel/memory/: memory.asm  memory.h  memory.hpp  register_addr.hpp
src/kernel/terminal/: Terminal.cpp  Terminal.h  Terminal.hpp  TextDisplay.cpp  TextDisplay.hpp
src/libraries/: string.hpp
src/memory/: memory.asm  memory.hpp
src/os/: CMakeLists.txt
src/os/boot/: CMakeLists.txt  GlobalConstructors.cpp  boot.cxx  boot_higher.asm  boot_info.h  boot_main.asm  init.cpp  init.h  linker.ld
src/os/boot/elf/: boot_elf_loader.cpp  boot_elf_loader.h  elf.cxx  elf.h  elf_loader.cxx
src/os/boot/gdt/: global_descriptor.cpp  global_descriptor.cxx  global_descriptor.h  global_descriptor_table.asm  global_descriptor_table.cpp  global_descriptor_table.cxx  global_descriptor_table.h
src/os/boot/grub/: multiboot_info.cxx  multiboot_info.h
src/os/boot/idt/: interrupt_descriptor.cpp  interrupt_descriptor.cxx  interrupt_descriptor.h  interrupt_descriptor_table.asm  interrupt_descriptor_table.cpp  interrupt_descriptor_table.cxx  interrupt_descriptor_table.h
src/os/boot/idt/exceptions/: exception_handler.asm  exception_handler.cpp  exception_handler.cxx  exception_handler.h
src/os/boot/idt/interrupts/: interrupt_handler.asm  interrupt_handler.cpp  interrupt_handler.cxx  interrupt_handler.h
src/os/boot/idt/model/: handler_registers.cxx  handler_registers.h
src/os/boot/idt/pic/: programmable_interrupt_controller.cpp  programmable_interrupt_controller.cxx  programmable_interrupt_controller.h
src/os/boot/memory/: boot_allocator.cpp  boot_allocator.cxx  boot_allocator.h
src/os/boot/modules/: loader.cxx  module_loader.cpp  module_loader.h
src/os/boot/paging/: paging.asm  paging.cpp  paging.cxx  paging.h
src/os/boot/paging/model/: page_directory_entry.cxx  page_directory_entry.h  page_table_entry.cxx  page_table_entry.h  paging_constants.h
src/os/boot/tss/: task_state_segment.asm  task_state_segment.cpp  task_state_segment.cxx  task_state_segment.h
src/os/hal/: CMakeLists.txt
src/os/hal/io/: io.asm  io.cxx  io.h
src/os/hal/paging/: page.cpp  page.h
src/os/kernel/: CMakeLists.txt  kernel.cpp  kernel_main.asm  linker.ld
src/os/kernel/thread/: ThreadIDProvider.cpp  ThreadIDProvider.cxx  ThreadIDProvider.h  ThreadTable.cpp  ThreadTable.cxx  ThreadTable.h  thread_id_provider.cxx  thread_table.cxx
src/os/kernel/thread/model/: ThreadControlBlock.cxx  ThreadControlBlock.h  thread_control_block.cxx
src/shared/lib/libc/: stdoffset.h
src/shared/lib/libcpp/: array.h
src/sysroot/: CMakeLists.txt
src/sysroot/usr/include/: stdio.h  string.h  unistd.h
src/toolchain/: CMakeLists.txt  buildToolChain.sh  configureBinutils.sh  configureGcc.sh  downloadDependencies.sh  extractDependencies.sh
src/userspace/: CMakeLists.txt
src/userspace/initialTask/: CMakeLists.txt
src/userspace/root/: CMakeLists.txt  linker.ld  root.cpp
toolchain/: CMakeLists.txt  (+3 more)
unit-tests/: CMakeLists.txt  catch_test_runner.cpp
unit-tests/kernel/klibc/stdio/: sprintf_test.cpp
unit-tests/kernel/lib/stdio/: sprintf_test.cpp
(+10 files in other folders)
